fix: alignment movie ratings

--- a/src/sass/pages/_movie_details.scss
+++ b/src/sass/pages/_movie_details.scss
@@ -286,6 +286,8 @@
 	& > * {
 		display: flex;
 		margin-right: 2rem;
+		justify-content: center;
+		align-items: center;
 	}
 	&__imdb {
 		img {
